--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr" dir="ltr">
-    <head>
-        <title>My static website</title>
-    </head>
-    <body>
-        <h1>My static website</h1>
-    </body>
+<head>
+    <title>[PROJECT] XSS PARTY</title>
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+    </style>
+</head>
+<body>
+<h1>[PROJECT] My static website - Q1 2022</h1>
+<p>Simple XSS attempt to <a href="http://testphp.vulnweb.com">testphp.vulnweb.com</a> educational platform. This
+    static website is hosted by Cloudflare.</p>
+<ul>
+    <li><a href="index.html">index.html</a></li>
+</ul>
+<ul>
+    <li><a href="xss_test_injection_bold.html">xss_test_injection_bold.html</a></li>
+    <li><a href="xss_test_injection_comment.html">xss_test_injection_comment.html</a></li>
+    <li><a href="xss_test_injection_italic.html">xss_test_injection_italic.html</a></li>
+    <li><a href="xss_test_injection_underline.html">xss_test_injection_underline.html</a></li>
+</ul>
+<ul>
+    <li><a href="xss_test_injection_js_alert.html">xss_test_injection_js_alert.html</a></li>
+    <li><a href="xss_test_injection_js_full.html">xss_test_injection_js_full.html</a></li>
+    <li><a href="xss_test_injection_js_hello.html">xss_test_injection_js_hello.html</a></li>
+    <li><a href="xss_test_injection_js_picasso.html">xss_test_injection_js_picasso.html</a></li>
+</ul>
+</body>
 </html>
