--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <h1>[PROJECT] My static website - Q1 2022</h1>
 <p>Simple XSS attempt to <a href="http://testphp.vulnweb.com">testphp.vulnweb.com</a> educational platform. This
-    static website is hosted by Cloudflare.</p>
+    static website is hosted by Cloudflare (<a href="https://prjxssparty.pages.dev">prjxssparty.pages.dev</a> ).</p>
 <ul>
     <li><a href="index.html">index.html</a></li>
 </ul>
