--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><a href="xss_test_injection_js_full.html">xss_test_injection_js_full.html</a></li>
     <li><a href="xss_test_injection_js_hello.html">xss_test_injection_js_hello.html</a></li>
     <li><a href="xss_test_injection_js_picasso.html">xss_test_injection_js_picasso.html</a></li>
+    <li><a href="xss_test_injection_js_homepage.html">xss_test_injection_js_homepage.html</a></li>
 </ul>
 </body>
 </html>
